fixed overflow bug

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 }
 
 #middle-content {
-    height: 72%;
+    height: 68%;
     display: flex;
     align-items: center; 
     justify-content:center;
